# CSCN71030_Group3

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  Main.qml  config.env  main.cpp  vcpkg.json
api/: AssignmentController.cpp  AssignmentController.hpp  AssignmentModel.cpp  AssignmentModel.hpp  AssignmentQueryController.cpp  AssignmentQueryController.hpp  AuthController.cpp  AuthController.hpp  BaseModel.cpp  BaseModel.hpp  Config.cpp  Config.hpp  CourseController.cpp  CourseController.hpp  CourseModel.cpp  CourseModel.hpp  DB.cpp  DB.hpp  HelpRequestController.cpp  HelpRequestController.hpp  HelpRequestModel.cpp  HelpRequestModel.hpp  IDatabase.hpp  UserModel.cpp  UserModel.hpp  controller.vcxproj  controller.vcxproj.filters
api/controller/x64/Debug/: vc143.idb
api/controller/x64/Debug/controller.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  controller.lastbuildstate
api/html/: _assignment_controller_8cpp.html  _assignment_controller_8hpp.html  _assignment_controller_8hpp.js  _assignment_controller_8hpp_source.html  _assignment_model_8cpp.html  _assignment_model_8hpp.html  _assignment_model_8hpp.js  _assignment_model_8hpp_source.html  _assignment_query_controller_8cpp.html  _assignment_query_controller_8hpp.html  _assignment_query_controller_8hpp.js  _assignment_query_controller_8hpp_source.html  _auth_controller_8cpp.html  _auth_controller_8hpp.html  _auth_controller_8hpp.js  _auth_controller_8hpp_source.html  _base_model_8hpp.html  _base_model_8hpp.js  _base_model_8hpp_source.html  _config_8cpp.html  _config_8hpp.html  _config_8hpp.js  _config_8hpp_source.html  _course_controller_8cpp.html  _course_controller_8hpp.html  _course_controller_8hpp.js  _course_controller_8hpp_source.html  _course_model_8cpp.html  _course_model_8hpp.html  _course_model_8hpp.js  _course_model_8hpp_source.html  _d_b_8cpp.html  _d_b_8hpp.html  _d_b_8hpp.js  _d_b_8hpp_source.html  _help_request_controller_8cpp.html  _help_request_controller_8hpp.html  _help_request_controller_8hpp.js  _help_request_controller_8hpp_source.html  _help_request_model_8cpp.html  (+80 more)
api/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+3 more)
api/latex/: _assignment_controller_8cpp.tex  _assignment_controller_8hpp.tex  _assignment_controller_8hpp_source.tex  _assignment_model_8cpp.tex  _assignment_model_8hpp.tex  _assignment_model_8hpp_source.tex  _assignment_query_controller_8cpp.tex  _assignment_query_controller_8hpp.tex  _assignment_query_controller_8hpp_source.tex  _auth_controller_8cpp.tex  _auth_controller_8hpp.tex  _auth_controller_8hpp_source.tex  _base_model_8hpp.tex  _base_model_8hpp_source.tex  _config_8cpp.tex  _config_8hpp.tex  _config_8hpp_source.tex  _course_controller_8cpp.tex  _course_controller_8hpp.tex  _course_controller_8hpp_source.tex  _course_model_8cpp.tex  _course_model_8hpp.tex  _course_model_8hpp_source.tex  _d_b_8cpp.tex  _d_b_8hpp.tex  _d_b_8hpp_source.tex  _help_request_controller_8cpp.tex  _help_request_controller_8hpp.tex  _help_request_controller_8hpp_source.tex  _help_request_model_8cpp.tex  _help_request_model_8hpp.tex  _help_request_model_8hpp_source.tex  _i_database_8hpp.tex  _i_database_8hpp_source.tex  _user_model_8cpp.tex  _user_model_8hpp.tex  _user_model_8hpp_source.tex  annotated.tex  class_assignment.eps  class_assignment.tex  (+27 more)
api_old/: AssignmentController.cpp  AssignmentModel.cpp  AssignmentModel.hpp  AssignmentQueryController.cpp  CourseController.hpp  DB.cpp  UserModel.cpp  UserModel.hpp  controller.sln
api_old/controller/x64/Debug/controller.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
build-itest/: CMakeCache.txt
build-release/: CMakeCache.txt
build-tests/: CMakeCache.txt
controller/: controller.vcxproj
controllers/: controller.vcxproj.filters
docs/: TEST_PLAN.md  TEST_REPORT.md
html/: doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
latex/: files.tex  main_8cpp.tex  refman.tex
tests/: CMakeLists.txt
tests/api/: assignment_controller_test.cpp  assignment_query_controller_test.cpp  auth_controller_test.cpp  course_controller_test.cpp  help_request_controller_test.cpp  models_test.cpp  stub_database.hpp
tests/api/integration/: auth_db_integration_test.cpp
view/: AssignmentCoordinatorView.qml  Login.qml  LoginView.qml  RegisterView.qml
view/Controllers/: AssignmentViewController.cpp  AuthViewController.cpp  CourseViewController.cpp  HelpRequestViewController.cpp
view/Controllers/headers/: AssignmentViewController.hpp  AuthViewController.h  CourseViewController.hpp  HelpRequestViewController.hpp
view/Models/: AssignmentFilterProxyModel.cpp  AssignmentListModel.cpp  AssignmentModel.cpp  AssignmentViewModel.cpp  CourseListModel.cpp  CourseViewModel.cpp  HelpRequestListModel.cpp  HelpRequestViewModel.cpp  UserViewModel.cpp
view/Models/headers/: AssignmentFilterProxyModel.hpp  AssignmentListModel.hpp  AssignmentModel.hpp  AssignmentViewModel.hpp  CourseListModel.hpp  CourseViewModel.hpp  HelpRequestListModel.hpp  HelpRequestViewModel.hpp  UserViewModel.h
view/Store/: Routes.qml  UserStore.qml  qmldir
